fix emojilist renders for new omoAPIHANDLER, fix spacing

--- a/src/scss/emojiList.scss
+++ b/src/scss/emojiList.scss
@@ -12,7 +12,7 @@
   }
 
   //padding top affects text pos margin top moves whole element
-  @each $name in "Chutes" "Fletcher" "Marie" "Vortex" {
+  @each $name in "chutes" "fletcher" "marie" "vortex" {
     .#{$name} {
       .pic {
         background: url(./../Assets/omo/#{$name}.png) no-repeat left top;
